[gd_scene load_steps=10 format=2]

[ext_resource path="res://src/ui/next_turn_buttons.gd" type="Script" id=1]
[ext_resource path="res://scenes/ui/next_turn/button.png" type="Texture" id=2]
[ext_resource path="res://scenes/ui/next_turn/button_pressed.png" type="Texture" id=3]
[ext_resource path="res://src/ui/next_turn_button.gd" type="Script" id=4]
[ext_resource path="res://assets/sound/sfx/End_turn.mp3" type="AudioStream" id=5]

[sub_resource type="InputEventAction" id=1]
action = "ui_accept"

[sub_resource type="ShortCut" id=2]
shortcut = SubResource( 1 )

[sub_resource type="GDScript" id=3]
script/source = "extends Button

func _enable_button():
	self.disabled = false

func _disable_button():
	self.disabled = true

func _ready() -> void:
	focus_mode = Control.FOCUS_NONE

func _on_pressed() -> void:
	GameSignals.emit_signal(\"spawn_critter\")

"

[sub_resource type="GDScript" id=4]
script/source = "extends Button

func _enable_button():
	self.disabled = false

func _disable_button():
	self.disabled = true

func _ready() -> void:
	focus_mode = Control.FOCUS_NONE

func _on_pressed() -> void:
	GameSignals.emit_signal(\"spawn_critter\")

"

[node name="next_turn_buttons" type="VBoxContainer"]
margin_left = 40.0
margin_top = 40.0
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="next_turn_button" type="TextureButton" parent="."]
margin_right = 200.0
margin_bottom = 50.0
shortcut_in_tooltip = false
shortcut = SubResource( 2 )
texture_normal = ExtResource( 2 )
texture_pressed = ExtResource( 3 )
script = ExtResource( 4 )

[node name="Label" type="Label" parent="next_turn_button"]
margin_left = 36.8655
margin_top = 19.6219
margin_right = 107.865
margin_bottom = 33.6219
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "NEXT TURN"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="next_turn" type="AudioStreamPlayer" parent="next_turn_button"]
stream = ExtResource( 5 )
volume_db = -5.0

[node name="next_turn_20" type="Button" parent="."]
margin_top = 54.0
margin_right = 200.0
margin_bottom = 74.0
text = "NEXT TURN X 20"
script = SubResource( 3 )

[node name="Timer" type="Timer" parent="next_turn_20"]
wait_time = 0.2
one_shot = true

[node name="spawn_critter" type="Button" parent="."]
margin_top = 78.0
margin_right = 200.0
margin_bottom = 98.0
text = "SPAWN CRITTER"
script = SubResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="next_turn_button" to="next_turn_button" method="_on_next_turn_buttom_pressed"]
[connection signal="button_up" from="next_turn_20" to="next_turn_20" method="_on_next_turn_20_button_up"]
[connection signal="button_up" from="spawn_critter" to="spawn_critter" method="_on_pressed"]
